@@ -61,5 +61,8 @@ cmdCallback cifCMD_description(char* args);
 cmdCallback cifCMD_nodescription(char* args);
 cmdCallback cifCMD_encap(char* args);
 cmdCallback cifCMD_noencap(char* args);
+cmdCallback cifCMD_ip_helper(char* args);
+cmdCallback cifCMD_noip_helper(char* args);
+
 
 #endif
